--- a/style.css
+++ b/style.css
@@ -54,5 +54,15 @@ font-size: 25px !important;
      h1, h2, h3, h4, h5, p {
     text-align: center !important;
     }
+
+
+
+.navbar {
+
+position: relative;
+
+
+}
+
 }
 
